src/style/page.sass
@font-face
	font-family: 'regular';
	src: url('../media/font/karla-regular-webfont.woff2') format('woff2'), url('../media/font/karla-regular-webfont.woff') format('woff');
	font-weight: normal;
	font-style: normal;

body, html
	min-height: 100%;
	height: 100%;

html
	background: #060A18;

*
	margin: 0;
	padding: 0;
	font-weight: 300;
	border: none;
	outline: none;
	text-decoration: none;
	list-style: none;
	font-family: 'regular'

p
	color: #fff;
	font-size: 20px;
	line-height: 23px;
	margin-bottom: 29px

a
	color: #F41F48;
	font-size: 20px;
	border-bottom: solid 2px transparent;
	&:hover
		border-bottom-color: #F41F48;

h1
	position: fixed;
	left: 40px;
	top: 40px;
	color: #fff;
	line-height: 32px;
	font-size: 40px;
	span
		font-size: 27px;
		display: block;
		color: #F41F48;
		text-transform: uppercase;

nav
	display: none;

main
	max-width: 670px;
	width: 90%;
	margin: auto;
	padding-top: 200px;

article
	width: 90%;
	margin: auto;
	margin-bottom: 80px;

	&::before
		content: '';
		border-top: solid 4px #fff;
		height: 4px;
		display: block;
		margin-bottom: 13px;

	strong
		color: #B9B9B9;
		text-transform: uppercase;
		display: block;
		margin-bottom: 6px;

	h2
		color: #fff;
		font-size: 40px;
		margin-bottom: 23px;


footer
	text-align: center;
	padding: 40px;
	left: 0;
	right: 0;
	position: fixed;
	bottom: 0;
	a
		color: #224;

@media screen and (min-width: 720px)

	nav
		display: block;
		position: fixed;
		top: 40px;
		right: 40px;

		a
			display: inline-block;
			width: 40px;
			height: 40px;
			margin-left: 13px;
			border: none;
			&:hover
				.social-icon
					fill: #F41F48;

	main
		position: relative;
		padding-top: 0;
		top: 40%;

	article
		position: relative;
		box-sizing: border-box;
		width: 664px;
		padding-left: 380px;
		&::before
			margin: 0;
			width: 330px;
			left: 0;
			top: 54px;
			position: absolute;

	footer
		width: 300px;
		right: 0;
		text-align: left;

